@@ -270,6 +270,13 @@ def init(options = {}):
     if not hasattr(Hellanzb, 'DELETE_PROCESSED'):
         Hellanzb.DELETE_PROCESSED = True
 
+    if hasattr(Hellanzb, 'UMASK'):
+        try:
+            Hellanzb.UMASK = int(Hellanzb.UMASK)
+        except ValueError:
+            error('Config file option: Hellanzb.UMASK is not a valid integer')
+            sys.exit(1)
+
     if not hasattr(Hellanzb, 'GROWL_NOTIFY'):
         error('Required option not defined in config file: Hellanzb.GROWL_NOTIFY')
         sys.exit(1)
