@@ -96,6 +96,10 @@ Hellanzb.DELETE_PROCESSED = True
 # Skip unraring during post processing
 #Hellanzb.SKIP_UNRAR = False
 
+# hellanzb inherits the umask from the current user's environment (unless it's
+# running in daemon mode). The umask can be forced here
+#Hellanzb.UMASK = 0022
+
 
 # Supported music types (case insensitive) and optionally their decompression
 # executables
